# FreeNote

./: README.md  binder.py  image_page_item.py  main.py  notebook.py  page.py  page_item.py  pyproject.toml  section.py  settings.py  style_consants.py  text_format_palette.py
icons/breeze/: index.theme
settings/: __init__.py  dialog.py  mixins.py  password.py
utilities/: debounce.py  rename_dialog.py  save_mixin.py  settings.py  toaster.py
